--- a/AutoMall/ViewControllers/PersonalCenter/CenterAccountVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/CenterAccountVC.xib
@@ -30,6 +30,16 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7e7-rb-sSs">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="225"/>
                             <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YQn-Tz-LMx">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="0.5"/>
+                                    <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="ERN-2b-dH0" customClass="NSLayoutConstraintOnePixelLine"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="账号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5t-gv-7Fr">
                                     <rect key="frame" x="16" y="12" width="35" height="21"/>
                                     <constraints>
@@ -42,9 +52,9 @@
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82I-oQ-uId">
                                     <rect key="frame" x="16" y="45" width="359" height="0.5"/>
-                                    <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="0.5" id="YaX-BS-Fgk"/>
+                                        <constraint firstAttribute="height" constant="1" id="YaX-BS-Fgk" customClass="NSLayoutConstraintOnePixelLine"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
@@ -74,9 +84,9 @@
                                 </textField>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgd-dE-lGb">
                                     <rect key="frame" x="16" y="90" width="359" height="0.5"/>
-                                    <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="0.5" id="MOI-B1-qNU"/>
+                                        <constraint firstAttribute="height" constant="1" id="MOI-B1-qNU" customClass="NSLayoutConstraintOnePixelLine"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
@@ -106,9 +116,9 @@
                                 </textField>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IuN-zh-tpN">
                                     <rect key="frame" x="0.0" y="134" width="375" height="0.5"/>
-                                    <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="0.5" id="PuN-Zg-i20"/>
+                                        <constraint firstAttribute="height" constant="1" id="PuN-Zg-i20" customClass="NSLayoutConstraintOnePixelLine"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
@@ -125,9 +135,9 @@
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GaV-7X-nHc">
                                     <rect key="frame" x="16" y="178" width="359" height="0.5"/>
-                                    <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="0.5" id="Awa-Oa-HEG"/>
+                                        <constraint firstAttribute="height" constant="1" id="Awa-Oa-HEG" customClass="NSLayoutConstraintOnePixelLine"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
@@ -171,9 +181,20 @@
                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bDI-Ms-EvJ">
+                                    <rect key="frame" x="0.0" y="224.5" width="375" height="0.5"/>
+                                    <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="d1J-fn-jru" customClass="NSLayoutConstraintOnePixelLine"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
+                                <constraint firstItem="YQn-Tz-LMx" firstAttribute="top" secondItem="7e7-rb-sSs" secondAttribute="top" id="020-z8-uO1"/>
                                 <constraint firstItem="MCz-Uq-FYF" firstAttribute="leading" secondItem="sY1-Bu-y48" secondAttribute="trailing" constant="8" id="1de-Zd-O2z"/>
                                 <constraint firstItem="TYr-ty-5td" firstAttribute="leading" secondItem="CWL-q2-JGL" secondAttribute="trailing" constant="8" id="2CA-Ro-J99"/>
                                 <constraint firstItem="wvc-Kz-LAB" firstAttribute="leading" secondItem="7e7-rb-sSs" secondAttribute="leading" constant="16" id="3di-d7-SEe"/>
@@ -194,15 +215,19 @@
                                 <constraint firstItem="KB5-wV-Jdu" firstAttribute="leading" secondItem="9oO-ox-wiV" secondAttribute="trailing" constant="8" id="Ktt-3Q-WPE"/>
                                 <constraint firstItem="82I-oQ-uId" firstAttribute="leading" secondItem="7e7-rb-sSs" secondAttribute="leading" constant="16" id="Mg0-Xn-SkH"/>
                                 <constraint firstItem="NLI-Cd-7mn" firstAttribute="centerY" secondItem="wvc-Kz-LAB" secondAttribute="centerY" id="O7j-hb-bPc"/>
+                                <constraint firstAttribute="trailing" secondItem="YQn-Tz-LMx" secondAttribute="trailing" id="OcJ-Vc-4d2"/>
                                 <constraint firstItem="c5t-gv-7Fr" firstAttribute="top" secondItem="7e7-rb-sSs" secondAttribute="top" constant="12" id="R2z-gs-TzB"/>
                                 <constraint firstItem="lgd-dE-lGb" firstAttribute="leading" secondItem="7e7-rb-sSs" secondAttribute="leading" constant="16" id="STZ-Sy-gN2"/>
                                 <constraint firstItem="GaV-7X-nHc" firstAttribute="leading" secondItem="7e7-rb-sSs" secondAttribute="leading" constant="16" id="VZw-Yy-Vcr"/>
                                 <constraint firstItem="2eQ-M0-vCs" firstAttribute="centerY" secondItem="c5t-gv-7Fr" secondAttribute="centerY" id="XsS-Tr-xqB"/>
                                 <constraint firstItem="CWL-q2-JGL" firstAttribute="leading" secondItem="7e7-rb-sSs" secondAttribute="leading" constant="16" id="Zyx-5l-OOh"/>
                                 <constraint firstItem="2eQ-M0-vCs" firstAttribute="leading" secondItem="c5t-gv-7Fr" secondAttribute="trailing" constant="8" id="cwU-fr-fRy"/>
+                                <constraint firstAttribute="bottom" secondItem="bDI-Ms-EvJ" secondAttribute="bottom" id="e1Z-Bi-Fnw"/>
                                 <constraint firstItem="9oO-ox-wiV" firstAttribute="leading" secondItem="7e7-rb-sSs" secondAttribute="leading" constant="16" id="elE-9Q-5AL"/>
+                                <constraint firstItem="bDI-Ms-EvJ" firstAttribute="leading" secondItem="7e7-rb-sSs" secondAttribute="leading" id="ent-MZ-Hge"/>
                                 <constraint firstAttribute="trailing" secondItem="2eQ-M0-vCs" secondAttribute="trailing" constant="16" id="fdz-g6-w3e"/>
                                 <constraint firstItem="IuN-zh-tpN" firstAttribute="leading" secondItem="7e7-rb-sSs" secondAttribute="leading" id="gAg-75-P5D"/>
+                                <constraint firstAttribute="trailing" secondItem="bDI-Ms-EvJ" secondAttribute="trailing" id="hZp-q2-AsF"/>
                                 <constraint firstAttribute="trailing" secondItem="GaV-7X-nHc" secondAttribute="trailing" id="kBP-KP-7cE"/>
                                 <constraint firstItem="IuN-zh-tpN" firstAttribute="top" secondItem="lgd-dE-lGb" secondAttribute="bottom" constant="44" id="n7c-AK-Zyp"/>
                                 <constraint firstItem="82I-oQ-uId" firstAttribute="top" secondItem="2eQ-M0-vCs" secondAttribute="bottom" constant="7" id="rTT-1W-J4c"/>
@@ -212,6 +237,7 @@
                                 <constraint firstItem="sY1-Bu-y48" firstAttribute="top" secondItem="82I-oQ-uId" secondAttribute="bottom" constant="12" id="xa2-8t-NiS"/>
                                 <constraint firstItem="sY1-Bu-y48" firstAttribute="leading" secondItem="7e7-rb-sSs" secondAttribute="leading" constant="16" id="xgp-22-AZu"/>
                                 <constraint firstAttribute="height" constant="225" id="xx0-s9-w0I"/>
+                                <constraint firstItem="YQn-Tz-LMx" firstAttribute="leading" secondItem="7e7-rb-sSs" secondAttribute="leading" id="zly-vo-OND"/>
                                 <constraint firstItem="c5t-gv-7Fr" firstAttribute="leading" secondItem="7e7-rb-sSs" secondAttribute="leading" constant="16" id="zrp-XO-wMz"/>
                             </constraints>
                         </view>
@@ -230,7 +256,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="49" id="I5Q-2F-HZs"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <state key="normal" title="保存"/>
                     <connections>
                         <action selector="saveInfoAction:" destination="-1" eventType="touchUpInside" id="H64-BY-lhh"/>
