--- a/AutoMall/ViewControllers/Mall/SettlementVC.xib
+++ b/AutoMall/ViewControllers/Mall/SettlementVC.xib
@@ -21,7 +21,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="r0R-DL-45S">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="563"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="q47-TS-Emb"/>
@@ -29,11 +29,12 @@
                     </connections>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vc5-3X-KhN">
-                    <rect key="frame" x="8" y="563" width="359" height="44"/>
+                    <rect key="frame" x="0.0" y="618" width="375" height="49"/>
                     <color key="backgroundColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="44" id="L38-VV-d5K"/>
+                        <constraint firstAttribute="height" constant="49" id="L38-VV-d5K"/>
                     </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <state key="normal" title="确认订单">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
@@ -47,12 +48,12 @@
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="vc5-3X-KhN" secondAttribute="trailing" constant="8" id="0Pf-1p-dX3"/>
-                <constraint firstAttribute="bottom" secondItem="vc5-3X-KhN" secondAttribute="bottom" constant="60" id="2Bb-me-Abc"/>
+                <constraint firstAttribute="trailing" secondItem="vc5-3X-KhN" secondAttribute="trailing" id="0Pf-1p-dX3"/>
+                <constraint firstAttribute="bottom" secondItem="vc5-3X-KhN" secondAttribute="bottom" id="2Bb-me-Abc"/>
                 <constraint firstItem="r0R-DL-45S" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="8m5-MP-98z"/>
                 <constraint firstItem="vc5-3X-KhN" firstAttribute="top" secondItem="r0R-DL-45S" secondAttribute="bottom" id="DJw-O7-cLt"/>
                 <constraint firstAttribute="trailing" secondItem="r0R-DL-45S" secondAttribute="trailing" id="Jps-1C-dpE"/>
-                <constraint firstItem="vc5-3X-KhN" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="h1L-h5-yYM"/>
+                <constraint firstItem="vc5-3X-KhN" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="h1L-h5-yYM"/>
                 <constraint firstItem="r0R-DL-45S" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="yIQ-Md-nxU"/>
             </constraints>
             <point key="canvasLocation" x="-203" y="-35"/>
